yew-functional-macro/tests/functional_macro/no-name-fail.stderr
error: invalid name for component provided unexpected end of input, expected identifier
 --> $DIR/no-name-fail.rs:9:1
  |
9 | #[functional_component()]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
